--- a/packages/blue-sdk-viem-bundler/package.json
+++ b/packages/blue-sdk-viem-bundler/package.json
@@ -35,7 +35,14 @@
     "viem": "^2.21.19"
   },
   "publishConfig": {
-    "access": "public",
-    "main": "lib/index.js"
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "exports": {
+      ".": {
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      }
+    },
+    "access": "public"
   }
 }
