--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
-  "version": "1.0.0-integ-745.1",
+  "version": "1.12.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
