--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -20,23 +20,14 @@
     "@morpho-org/blue-sdk": "workspace:^",
     "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
-    "@nomicfoundation/hardhat-ethers": "^3.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
-    "@types/chai": "^4.3.14",
-    "@types/mocha": "^10.0.6",
+    "@morpho-org/test": "workspace:^",
+    "@morpho-org/test-ethers": "workspace:^",
     "@types/node": "^22.1.0",
-    "@types/sinon": "^17.0.3",
-    "@types/sinon-chai": "^3.2.12",
-    "chai": "^4.3.10",
-    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "ethers-types": "^3.17.0",
-    "hardhat": "^2.22.6",
-    "hardhat-deal": "^3.1.0",
-    "mocha": "^10.4.0",
-    "sinon": "^19.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "viem": "^2.21.19",
+    "vitest": "^2.1.2"
   },
   "peerDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
