--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -26,6 +26,8 @@
     "@morpho-org/blue-sdk-viem": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
     "@morpho-org/test": "workspace:^",
+    "@morpho-org/test-viem": "workspace:^",
+    "@morpho-org/test-wagmi": "workspace:^",
     "@tanstack/query-core": "^5.55.4",
     "@tanstack/react-query": "^5.59.0",
     "@testing-library/dom": "^10.4.0",
@@ -42,6 +44,7 @@
     "react-dom": "^18.3.1",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
+    "vitest": "^2.1.2",
     "wagmi": "^2.12.17"
   },
   "publishConfig": {
