--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -12,7 +12,8 @@
     "build": "tsc --build tsconfig.build.json"
   },
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.2"
   },
   "publishConfig": {
     "main": "lib/index.js",
