--- a/packages/simulation-sdk-wagmi/package.json
+++ b/packages/simulation-sdk-wagmi/package.json
@@ -33,6 +33,8 @@
     "@morpho-org/morpho-ts": "workspace:^",
     "@morpho-org/simulation-sdk": "workspace:^",
     "@morpho-org/test": "workspace:^",
+    "@morpho-org/test-viem": "workspace:^",
+    "@morpho-org/test-wagmi": "workspace:^",
     "@tanstack/query-core": "^5.59.0",
     "@tanstack/react-query": "^5.59.0",
     "@types/lodash": "^4.17.9",
