--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -10,8 +10,7 @@
   ],
   "scripts": {
     "prepublish": "yarn build",
-    "build": "tsc --build tsconfig.build.json",
-    "test": "hardhat test"
+    "build": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
     "rxjs": "^7.8.1"
