--- a/packages/blue-sdk-viem/package.json
+++ b/packages/blue-sdk-viem/package.json
@@ -11,8 +11,7 @@
   "scripts": {
     "prepublish": "yarn build",
     "compile": "hardhat compile",
-    "build": "tsc --build tsconfig.build.json",
-    "test": "hardhat test"
+    "build": "tsc --build tsconfig.build.json"
   },
   "peerDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
@@ -26,6 +25,8 @@
     "@morpho-org/test": "workspace:^",
     "@morpho-org/test-viem": "workspace:^",
     "@types/node": "^22.1.0",
+    "hardhat": "^2.22.13",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
     "vitest": "^2.1.2"
