--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -42,14 +42,11 @@
     "@morpho-org/test": "workspace:^",
     "@morpho-org/test-viem": "workspace:^",
     "@types/node": "^22.7.0",
-    "@types/simple-mock": "^0",
     "evm-maths": "^7.0.0",
     "executooor-viem": "^1.3.1",
-    "fetch-mock": "^11.1.4",
+    "fetch-mock": "^11.1.5",
     "hardhat": "^2.22.13",
-    "nock": "^13.5.5",
-    "node-fetch": "^3.3.2",
-    "simple-mock": "^0.8.0",
+    "nock": "beta",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
