test(bundler): make base test pass

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           - simulation-sdk-wagmi
           - bundler-sdk
 
-          - liquidation-sdk-ethers
+          - liquidation-sdk-viem
 
     runs-on: ubuntu-latest
 
