--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@lerna-lite/cli": "^3.9.2",
     "@lerna-lite/publish": "^3.9.2",
     "@lerna-lite/version": "^3.9.2",
+    "@types/kill-port": "^2",
     "@vitest/coverage-v8": "^2.1.2",
     "dotenv-cli": "^7.4.2",
     "happy-dom": "^15.7.4",
     "husky": "^9.1.6",
+    "kill-port": "^2.0.1",
     "typescript": "^5.6.3",
     "vitest": "^2.1.2"
   }
