--- a/packages/bundler-sdk/package.json
+++ b/packages/bundler-sdk/package.json
@@ -25,11 +25,15 @@
     "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
     "@morpho-org/simulation-sdk": "workspace:^",
+    "@morpho-org/simulation-sdk-wagmi": "workspace:^",
+    "@morpho-org/test-viem": "workspace:^",
+    "@morpho-org/test-wagmi": "workspace:^",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.2.0",
     "lodash": "^4.17.21",
     "typescript": "^5.6.3",
-    "viem": "^2.21.19"
+    "viem": "^2.21.19",
+    "vitest": "^2.1.2"
   },
   "publishConfig": {
     "main": "lib/index.js",
