--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -43,6 +43,7 @@ jobs:
           cache: yarn
 
       - run: yarn install --immutable
+      - run: yarn postinstall # for some reason, postinstall script does not get executed automatically
 
       - name: Version and publish
         run: |
