--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "packageManager": "yarn@4.5.0",
   "workspaces": ["packages/*"],
   "scripts": {
-    "postinstall": "husky install",
+    "postinstall": "husky && yarn lint --write package.json",
     "lint": "biome check",
     "test": "dotenv -- vitest",
     "coverage": "vitest run --coverage",
