build(viem-deal): bump deal

--- a/packages/blue-sdk-viem/package.json
+++ b/packages/blue-sdk-viem/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "main": "src/index.ts",
   "type": "module",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "prepublish": "yarn build",
     "compile": "hardhat compile",
