--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node": ">=22"
   },
   "packageManager": "yarn@4.5.0",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "postinstall": "husky && yarn lint --write package.json packages/**/package.json",
     "lint": "biome check",
