--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -4,7 +4,9 @@
   "author": "Morpho Association <contact@morpho.org>",
   "type": "module",
   "main": "src/index.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "prepublish": "yarn build",
     "codegen": "graphql-codegen --config codegen.ts",
