--- a/packages/bundler-sdk/package.json
+++ b/packages/bundler-sdk/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "type": "module",
   "main": "src/index.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "prepublish": "yarn build",
     "build": "tsc --build tsconfig.build.json"
