--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -4,7 +4,10 @@
   "author": "Morpho Association <contact@morpho.org>",
   "type": "module",
   "main": "src/index.ts",
-  "files": ["lib", "examples"],
+  "files": [
+    "lib",
+    "examples"
+  ],
   "scripts": {
     "prepublish": "yarn build",
     "compile": "hardhat compile",
