docs(README): add base readme

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
 
           - simulation-sdk
           - simulation-sdk-wagmi
-          - bundler-sdk
+          - bundler-sdk-viem
 
           - liquidation-sdk-viem
 
