--- a/packages/bundler-sdk-viem/package.json
+++ b/packages/bundler-sdk-viem/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "@morpho-org/bundler-sdk",
+  "name": "@morpho-org/bundler-sdk-viem",
   "version": "2.0.0-alpha.10",
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
   "type": "module",
   "main": "src/index.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "scripts": {
     "prepublish": "yarn build",
     "build": "tsc --build tsconfig.build.json"
