--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@morpho-org/blue-api-sdk",
   "version": "2.0.0-alpha.10",
-  "author": "Morpho Association <contact@morpho.org>",
+  "author": "Morpho Labs <contact@morpho.org>",
   "type": "module",
   "main": "src/index.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "scripts": {
     "prepublish": "yarn build",
     "codegen": "graphql-codegen --config codegen.ts",
