--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -1,13 +1,10 @@
 {
   "name": "@morpho-org/liquidation-sdk-viem",
   "version": "2.0.0-alpha.10",
-  "author": "Morpho Association <contact@morpho.org>",
+  "author": "Morpho Labs <contact@morpho.org>",
   "type": "module",
   "main": "src/index.ts",
-  "files": [
-    "lib",
-    "examples"
-  ],
+  "files": ["lib", "examples"],
   "scripts": {
     "prepublish": "yarn build",
     "compile": "hardhat compile",
