--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@morpho-org/morpho-ts",
   "version": "2.0.0-alpha.10",
-  "author": "Morpho Association <contact@morpho.org>",
+  "author": "Morpho Labs <contact@morpho.org>",
   "license": "MIT",
   "main": "src/index.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "scripts": {
     "prepublish": "yarn build",
     "build": "tsc --build tsconfig.build.json"
