--- a/packages/simulation-sdk-wagmi/package.json
+++ b/packages/simulation-sdk-wagmi/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@morpho-org/simulation-sdk-wagmi",
   "version": "2.0.0-alpha.10",
-  "author": "Morpho Association <contact@morpho.org>",
+  "author": "Morpho Labs <contact@morpho.org>",
   "license": "MIT",
   "type": "module",
   "main": "src/index.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "scripts": {
     "prepublish": "yarn build",
     "build": "tsc --build tsconfig.build.json"
