--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,6 @@ jobs:
           cache: yarn
 
       - run: yarn install --immutable
-      - run: yarn postinstall # for some reason, postinstall script does not get executed automatically
+      - run: yarn lint --write package.json packages/**/package.json # for some reason, postinstall script does not get executed automatically
 
       - run: yarn lint
