--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -43,7 +43,7 @@ jobs:
           cache: yarn
 
       - run: yarn install --immutable
-      - run: yarn postinstall # for some reason, postinstall script does not get executed automatically
+      - run: yarn lint --write package.json packages/**/package.json # for some reason, postinstall script does not get executed automatically
 
       - name: Version and publish
         run: |
