--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: foundry-rs/foundry-toolchain@v1
 
       - run: yarn install --immutable
-      - run: yarn postinstall # for some reason, postinstall script does not get executed automatically
+      - run: yarn lint --write package.json packages/**/package.json # for some reason, postinstall script does not get executed automatically
 
       - run: yarn test --coverage
         env:
