--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -16,13 +16,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
-          cache: yarn
+          cache: pnpm
 
       - uses: foundry-rs/foundry-toolchain@v1
 
-      - run: yarn install --immutable
-      - run: yarn lint --write package.json packages/**/package.json # for some reason, postinstall script does not get executed automatically
+      - run: pnpm install
 
-      - run: yarn test --coverage
+      - run: pnpm run test --coverage
         env:
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
