--- a/package.json
+++ b/package.json
@@ -10,23 +10,72 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "yarn@4.5.0",
-  "workspaces": ["packages/*"],
   "scripts": {
+    "prepare": "husky",
     "lint": "biome check",
     "test": "dotenv -- vitest",
-    "coverage": "vitest run --coverage",
-    "publish": "lerna publish from-git"
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
-    "@lerna-lite/cli": "^3.9.3",
-    "@lerna-lite/publish": "^3.9.3",
-    "@lerna-lite/version": "^3.9.3",
-    "@vitest/coverage-v8": "^2.1.2",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@vitest/coverage-v8": "^2.1.3",
     "dotenv-cli": "^7.4.2",
     "happy-dom": "^15.7.4",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
+  },
+  "lint-staged": {
+    "*.json": "biome check --write",
+    "*.ts*": "biome check --write"
+  },
+  "commitlint": {
+    "extends": ["@commitlint/config-conventional"]
+  },
+  "release": {
+    "branches": ["main", "next"],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "conventionalcommits",
+          "releaseRules": [
+            {
+              "type": "build",
+              "scope": "deps",
+              "release": "patch"
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "conventionalcommits",
+          "presetConfig": {
+            "types": [
+              {
+                "type": "feat",
+                "section": "Features"
+              },
+              {
+                "type": "fix",
+                "section": "Bug Fixes"
+              },
+              {
+                "type": "build",
+                "section": "Dependencies and Other Build Updates",
+                "hidden": false
+              }
+            ]
+          }
+        }
+      ],
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ]
   }
 }
