--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -7,7 +7,7 @@
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepublish": "$npm_execpath build",
     "build": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
@@ -24,7 +24,7 @@
     "ethers-types": "^3.17.0",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "peerDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
