--- a/packages/blue-sdk-viem/package.json
+++ b/packages/blue-sdk-viem/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "files": ["lib"],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepublish": "$npm_execpath build",
     "compile": "hardhat compile",
     "build": "tsc --build tsconfig.build.json"
   },
@@ -27,7 +27,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "publishConfig": {
     "main": "lib/index.js",
