--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -7,7 +7,7 @@
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepublish": "$npm_execpath build",
     "build": "tsc --build tsconfig.build.json"
   },
   "peerDependencies": {
@@ -38,7 +38,7 @@
     "react-dom": "^18.3.1",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
-    "vitest": "^2.1.2",
+    "vitest": "^2.1.3",
     "wagmi": "^2.12.17"
   },
   "publishConfig": {
