--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -7,7 +7,7 @@
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepublish": "$npm_execpath build",
     "build": "tsc --build tsconfig.build.json",
     "test": "vitest"
   },
@@ -25,7 +25,7 @@
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
     "viem-deal": "^2.0.0",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "publishConfig": {
     "main": "lib/index.js",
