--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.ts",
   "files": ["lib", "examples"],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepublish": "$npm_execpath build",
     "compile": "hardhat compile",
     "build": "tsc --build tsconfig.build.json",
     "codegen": "graphql-codegen --config codegen.ts"
@@ -47,7 +47,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "publishConfig": {
     "main": "lib/index.js",
