--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -6,12 +6,12 @@
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepublish": "$npm_execpath build",
     "build": "tsc --build tsconfig.build.json"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "publishConfig": {
     "main": "lib/index.js",
