--- a/packages/simulation-sdk/package.json
+++ b/packages/simulation-sdk/package.json
@@ -7,7 +7,7 @@
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepublish": "$npm_execpath build",
     "build": "tsc --build tsconfig.build.json"
   },
   "peerDependencies": {
@@ -27,7 +27,7 @@
     "mutative": "^1.0.11",
     "typescript": "^5.6.3",
     "viem": "^2.21.19",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "publishConfig": {
     "main": "lib/index.js",
