--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "type": "module",
   "private": true,
+  "packageManager": "pnpm@9.12.1",
   "engines": {
     "node": ">=22"
   },
