--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "extends": ["@commitlint/config-conventional"]
   },
   "release": {
-    "branches": ["main"],
+    "branches": ["main", "feat/vitest"],
     "extends": "semantic-release-monorepo"
   }
 }
