--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -22,4 +22,4 @@ jobs:
 
       - run: pnpm install
 
-      - run: pnpm -r exec semantic-release --dry-run
+      - run: pnpm exec semantic-release --dry-run
