--- a/packages/simulation-sdk/package.json
+++ b/packages/simulation-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morpho-org/simulation-sdk",
-  "version": "2.0.0-stable.0",
+  "version": "1.0.0",
   "author": "Morpho Labs <contact@morpho.org>",
   "license": "MIT",
   "type": "module",
