--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -59,5 +59,9 @@
       }
     },
     "access": "public"
+  },
+  "release": {
+    "branches": ["main", "feat/vitest"],
+    "extends": "semantic-release-monorepo"
   }
 }
