--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run: pnpm install
 
-      - run: pnpm exec semantic-release --dry-run
+      - run: pnpm -r --workspace-concurrency=1 exec semantic-release --dry-run
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
