--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -32,5 +32,9 @@
       }
     },
     "access": "public"
+  },
+  "release": {
+    "branches": ["main", "feat/vitest"],
+    "extends": "semantic-release-monorepo"
   }
 }
