--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -51,5 +51,9 @@
       }
     },
     "access": "public"
+  },
+  "release": {
+    "branches": ["main", "feat/vitest"],
+    "extends": "semantic-release-monorepo"
   }
 }
