--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -23,5 +23,9 @@
       }
     },
     "access": "public"
+  },
+  "release": {
+    "branches": ["main", "feat/vitest"],
+    "extends": "semantic-release-monorepo"
   }
 }
