--- a/packages/simulation-sdk/package.json
+++ b/packages/simulation-sdk/package.json
@@ -39,5 +39,9 @@
       }
     },
     "access": "public"
+  },
+  "release": {
+    "branches": ["main", "feat/vitest"],
+    "extends": "semantic-release-monorepo"
   }
 }
