--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -1,10 +1,12 @@
 name: Test packages
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
+  workflow_call:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}
+  cancel-in-progress: true
 
 jobs:
   vitest:
