--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -39,7 +39,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main", "feat/vitest"],
+    "branches": ["main"],
     "extends": "semantic-release-monorepo"
   }
 }
