--- a/packages/bundler-sdk-viem/package.json
+++ b/packages/bundler-sdk-viem/package.json
@@ -46,7 +46,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main", "feat/vitest"],
+    "branches": ["main"],
     "extends": "semantic-release-monorepo"
   }
 }
