--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main", "feat/vitest"],
+    "branches": ["main"],
     "extends": "semantic-release-monorepo"
   }
 }
