--- a/packages/simulation-sdk/package.json
+++ b/packages/simulation-sdk/package.json
@@ -41,7 +41,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main", "feat/vitest"],
+    "branches": ["main"],
     "extends": "semantic-release-monorepo"
   }
 }
