ci(build): name jobs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
 
           - liquidation-sdk-viem
 
+    name: "@morpho-org/${{ matrix.package }}"
     runs-on: ubuntu-latest
 
     steps:
