ci(release): add next branch

--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -34,7 +34,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main"],
+    "branches": ["main", "next"],
     "extends": "semantic-release-monorepo"
   }
 }
