--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -44,7 +44,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main"],
+    "branches": ["main", "next"],
     "extends": "semantic-release-monorepo"
   }
 }
