--- a/packages/blue-sdk-viem/package.json
+++ b/packages/blue-sdk-viem/package.json
@@ -41,7 +41,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main"],
+    "branches": ["main", "next"],
     "extends": "semantic-release-monorepo"
   }
 }
