--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -1,9 +1,7 @@
-name: Test packages
+name: Test
 
 on:
   pull_request:
-    branches-ignore:
-      - next
   workflow_call:
 
 concurrency:
@@ -12,6 +10,8 @@ concurrency:
 
 jobs:
   vitest:
+    if: github.event_name == 'workflow_call' || github.ref != 'refs/heads/next' && github.base_ref != 'refs/heads/main'
+
     runs-on: ubuntu-latest
 
     steps:
