--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,22 +1,21 @@
-name: Release
+name: Push
 
 on:
   push:
-    branches:
-      - main
-      - next
 
 jobs:
+  lint:
+    uses: ./.github/workflows/lint.yml
+
   build:
     uses: ./.github/workflows/build.yml
-    secrets: inherit
 
   vitest:
     uses: ./.github/workflows/vitest.yml
-    secrets: inherit
 
   release:
     needs:
+      - lint
       - build
       - vitest
 
