ci(release): set next as prerelease

--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main", "next"],
+    "branches": ["main", { "name": "next", "prerelease": true }],
     "extends": "semantic-release-monorepo"
   }
 }
