--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -61,7 +61,7 @@
     "access": "public"
   },
   "release": {
-    "branches": ["main", "next"],
+    "branches": ["main", { "name": "next", "prerelease": true }],
     "extends": "semantic-release-monorepo"
   }
 }
