--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -23,7 +23,7 @@ jobs:
 
       - run: pnpm install
 
-      - run: pnpm -r exec semantic-release --dry-run
+      - run: pnpm -r exec semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
