--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,6 +47,11 @@ jobs:
 
       - run: pnpm install
 
+      - run: |
+          release_config=$(jq -r '.release' package.json)
+
+          pnpm -r exec jq --arg value "$release_config" '.release = $value' package.json > tmp.json && mv tmp.json package.json
+
       - run: pnpm --filter @morpho-org/${{ matrix.package }} exec semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
