--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@biomejs/biome": "^1.9.3",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@semantic-release/exec": "^6.0.3",
     "@vitest/coverage-v8": "^2.1.3",
     "dotenv-cli": "^7.4.2",
     "happy-dom": "^15.7.4",
@@ -37,5 +38,22 @@
   },
   "commitlint": {
     "extends": ["@commitlint/config-conventional"]
+  },
+  "release": {
+    "branches": ["main", { "name": "next", "prerelease": true }],
+    "extends": "semantic-release-monorepo",
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/github",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": "pnpm version ${nextRelease.version} --git-tag-version=false",
+          "publishCmd": "pnpm publish --access public --no-git-checks"
+        }
+      ]
+    ]
   }
 }
