ci(publish): disable test requirement

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,7 +22,7 @@ jobs:
     needs:
       - lint
       - build
-      - test
+      # - test
 
     uses: ./.github/workflows/publish.yml
     secrets: inherit
