--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,8 @@ jobs:
       - run: |
           release_config=$(jq -r '.release' package.json)
 
-          pnpm --filter @morpho-org/${{ matrix.package }} exec echo "$release_config" > .releaserc
+          jq --arg value "$release_config" '.release = $value' packages/${{ matrix.package }}/package.json > tmp.json
+          mv tmp.json packages/${{ matrix.package }}/package.json
 
       - run: pnpm --filter @morpho-org/${{ matrix.package }} exec semantic-release
         env:
