--- a/package.json
+++ b/package.json
@@ -45,14 +45,19 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/github",
+      [
+        "@semantic-release/npm",
+        {
+          "npmPublish": false
+        }
+      ],
       [
         "@semantic-release/exec",
         {
-          "publishCmd": "pnpm publish --access public --no-git-checks"
+          "publishCmd": "pnpm publish --access public --tag ${nextRelease.channel} --no-git-checks"
         }
-      ]
+      ],
+      "@semantic-release/github"
     ]
   }
 }
