--- a/package.json
+++ b/package.json
@@ -46,14 +46,9 @@
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-      ],
-      [
         "@semantic-release/exec",
         {
+          "prepareCmd": "pnpm version ${nextRelease.version} --no-git-tag-version",
           "publishCmd": "pnpm publish --access public --tag ${nextRelease.channel} --no-git-checks"
         }
       ],
