--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,9 @@ jobs:
     uses: ./.github/workflows/lint.yml
 
   build:
+    # Skip build on `main` and `next` branches because it's already done in `publish`.
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/next'
+
     uses: ./.github/workflows/build.yml
 
   test:
@@ -19,10 +22,11 @@ jobs:
     secrets: inherit
 
   publish:
+    if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/next'
+
     needs:
       - lint
-      - build
-      # - test
+      - test
 
     uses: ./.github/workflows/publish.yml
     secrets: inherit
