ci(push): always build

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,9 +12,6 @@ jobs:
     uses: ./.github/workflows/lint.yml
 
   build:
-    # Skip build on `main` and `next` branches because it's already done in `publish`.
-    if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/next'
-
     uses: ./.github/workflows/build.yml
 
   test:
@@ -26,6 +23,7 @@ jobs:
 
     needs:
       - lint
+      - build
       - test
 
     uses: ./.github/workflows/publish.yml
