--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@morpho-org/morpho-ts",
   "version": "1.12.4",
-  "author": "Morpho Labs <contact@morpho.org>",
+  "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
   "main": "src/index.ts",
   "files": ["lib"],
