--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,32 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        package:
-          - test
-          - test-viem
-          - test-ethers
-          - test-wagmi
-
-          - morpho-ts
-          - morpho-test
-
-          - blue-api-sdk
-          - blue-sdk
-          - blue-sdk-ethers
-          - blue-sdk-viem
-          - blue-sdk-wagmi
-
-          - simulation-sdk
-          - simulation-sdk-wagmi
-          - bundler-sdk-viem
-
-          - liquidation-sdk-viem
-
-    name: "@morpho-org/${{ matrix.package }}"
+  packages:
     runs-on: ubuntu-latest
 
     steps:
@@ -44,4 +19,4 @@ jobs:
 
       - run: pnpm install
 
-      - run: pnpm --filter @morpho-org/${{ matrix.package }} build
+      - run: pnpm -r --parallel --no-reporter-hide-prefix build
